# flake8-polyfill

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  README.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
src/flake8_polyfill/: __init__.py  options.py  stdin.py  version.py
tests/: test_import.py  test_options.py  test_stdin.py
