[metadata]
name = flake8_polyfill
version = attr: flake8_polyfill.__version__
description = Polyfill package for Flake8 plugins
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pycqa/flake8-polyfill
author = Ian Stapleton Cordasco
author_email = graffatcolmingov@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Environment :: Console
    Framework :: Flake8
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance

[options]
packages = flake8_polyfill
install_requires =
    flake8
python_requires = >=3.6
package_dir = =src

[bdist_wheel]
universal = 1

[tool:pytest]
norecursedirs = .git .* *.egg* old docs dist build
addopts = -rw
